--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
     <header>
+      <a name="navbar"></a>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
               <a class="navbar-brand" href="#" ><img src="images/logo-apdis.png" width="80px" alt="Logo"
@@ -25,7 +26,7 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="#navbar">Inicio</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#quienesSomos">Quienes somos</a>
@@ -43,8 +44,9 @@
     </header>
 
     <main>
+      <a name="inicio"></a>
       <div class="container text-center contenedorImagen">
-        <div class="imagenInicio">
+        <div class="imagenInicio ">
           <h1
             data-aos="fade-down"
             data-aos-easing="linear"
@@ -77,15 +79,31 @@
           >
             Quienes somos y que hacemos
           </h1>
-      <div class="container text-center"><img src="images/oficina.avif" alt="oficina" width="100%" height="550px"></div>
-      </div>
-      <div class="container text-center">
-        <h5>
-          APDIS, desde sus origenes, se propuso cumplir Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, deserunt suscipit. Fuga eius sit reprehenderit doloremque veritatis mollitia quam ullam optio molestiae facilis praesentium, sint cupiditate earum doloribus, ipsam nulla. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio, a inventore, hic beatae alias mollitia incidunt tempore doloremque nobis adipisci ullam sunt eius. Earum possimus dolores facilis natus labore nihil!
-        </h5>
-      </div>
 
-         
+          <div class="container">
+            <div class="row">              
+              <div class="col-lg-6 d-none d-lg-block">
+                <img src="images/oficina.avif" alt="oficina" width="100%" height="400px">
+              </div>              
+              <div class="col-lg-6 col-sm-12">
+                <div class="d-flex align-items-center h-100">                  
+                  <h5>
+                    APDIS, desde sus orígenes, se propuso cumplir con los objetivos de cuidar la salud de sus afiliados y de su grupo familiar, haciéndolo de modo sostenible en el tiempo. En toda tarea propuesta, su ejecución y sus resultados dependen entre otros factores del medio, de las personas que la ejecutan y de todos aquellos a quienes va dirigida; en nuestro caso aspiramos en nuestras decisiones a priorizar a la persona, sus necesidades y sus dificultades, tratando de sostener un accionar equitativo y buscando estar cerca del afiliado en la resolución de sus problemas de salud.
+                  </h5>                 
+                </div>
+              </div>              
+              <div class="col-sm-12 d-lg-none">
+                <img src="images/oficina.avif" alt="oficina" width="100%" height="550px">
+              </div>
+            </div>
+          </div> 
+          </div> 
+          <br>
+          <div class="container text-center">
+            <h5>
+            APDIS pretende ser más que una obra social, somos una gran familia en la que todos colaboramos mutuamente para tener una adecuada cobertura en nuestras necesidades del día a día, pero al mismo tiempo una atención especial cuando la gravedad del caso lo requiere donde redoblamos los esfuerzos para garantizar una cobertura satisfactoria desde todo punto de vista. En estos casos todo el staff, tanto directivo como el personal de gestión, se pone a disposición del afiliado y su familia para darle contención y una atención personalizada y altamente especializada.
+          </h5>
+          </div> 
 <br><br>
          
 <!-- <a name="cartillas"></a>
@@ -221,11 +239,15 @@
   </div>
 </div>
 <br><br>
-
-
-
     </main>
-
+<footer>
+  <div class="container text-center divLogoPie">
+   <a href="#navbar"><img src="images/logo-apdis.png" alt="logo" class="logoPie"></a>   
+  </div>
+  <div class="container text-center">
+    ©2024 APDIS Obra Social del Personal de Dirección de la Industria Siderúrgica.
+  </div>
+</footer>
     <!-- <main>
       <div class="container text-center contenedorImagen">        
         <div class="imagenInicio">
