mas cambios commit

--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
+  <link
+      rel="shortcut icon"
+      href="images/logo-apdis.png"
+      type="image/x-icon"
+    />
 </head>
-<body>
+<body class="body">
     <header>
       <a name="navbar"></a>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary barra">
             <div class="container-fluid">
               <a class="navbar-brand" href="#" ><img src="images/logo-apdis.png" width="80px" alt="Logo"
                 /></a>
@@ -26,16 +31,16 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#navbar">Inicio</a>
+                    <a class="nav-link active" aria-current="page" href="#navbar">INICIO</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#quienesSomos">Quienes somos</a>
+                    <a class="nav-link" href="#quienesSomos">QUIENES SOMOS</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#cartillas">Cartillas</a>
+                    <a class="nav-link" href="#informacion">INFO IMPORTANTE</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#informacion">Informacion importante</a>
+                    <a class="nav-link" href="#cartillas">CARTILLAS</a>
                   </li>
                 </ul>
               </div>
@@ -45,9 +50,8 @@
 
     <main>
       <a name="inicio"></a>
-      <div class="container text-center contenedorImagen">
-        <div class="imagenInicio ">
-          <h1
+      <div class="container text-center somos">
+        <h1
             data-aos="fade-down"
             data-aos-easing="linear"
             data-aos-duration="1500"
@@ -56,6 +60,9 @@
           </h1>
           <h2 data-aos="zoom-in"          
           data-aos-duration="1500">como vos los cuidas a ellos.</h2>
+      </div>
+      <div class="container text-center contenedorImagen">
+        <div class="imagenInicio ">          
           <div class="texto">
             <h4>En APDIS trabajamos día a día para brindar <br>
                la mejor atencion a todos nuestros afiliados.<br>
@@ -132,10 +139,26 @@
             </div>
             <div class="carousel-item tamImagen">
               <img
+                src="images/bullying-portada.jpg"
+                height="600px"                
+                class="d-block w-100 img-fluid"
+                alt="Rack"
+              />
+            </div>
+            <div class="carousel-item tamImagen">
+              <img
                 src="images/infografiacancermama-web.jpg"
                 height="600x"               
                 class="d-block w-100 img-fluid"
                 alt="Escritorio"
+              />
+            </div>
+            <div class="carousel-item tamImagen">
+              <img
+                src="images/identidad-portada.jpg"
+                height="600px"                
+                class="d-block w-100 img-fluid"
+                alt="Rack"
               />
             </div>
             <div class="carousel-item tamImagen">
@@ -208,9 +231,9 @@
 </div> -->
 
 <div class="card">
-  <div class="card-img-top img-fluid" style="background-image: url(images/working.jpg); background-size: cover;">
+  <div class="card-img-top img-fluid" style="background-image: url(images/oficina4.jpg); background-size: cover;">
    <div class="card-body">
-    <h3 class="card-title">Plan Azul</h3>
+    <h3 class="card-title azul">Plan Azul</h3>
     <br>
     <div class="text-center">
       <div class="button-container">
@@ -226,7 +249,7 @@
 <br><br>
 
 <div class="card">
-  <div class="card-img-top img-fluid" style="background-image: url(images/fondo-oro.jpg); background-size: cover;">
+  <div class="card-img-top img-fluid" style="background-image: url(images/working.jpg); background-size: cover;">
   <div class="card-body">
     <h3 class="card-title">Plan Oro</h3>    
     <div class="text-center">
