--- a/index.html
+++ b/index.html
@@ -62,18 +62,26 @@
           data-aos-duration="1500">como vos los cuidas a ellos.</h2>
       </div>
       <div class="container text-center contenedorImagen">
-        <div class="imagenInicio ">          
-          <div class="texto">
-            <h4>En APDIS trabajamos día a día para brindar <br>
+        <div class="imagenInicio">          
+          <!-- <div class="texto">
+            <h5>En APDIS trabajamos día a día para brindar <br>
                la mejor atencion a todos nuestros afiliados.<br>
                Si tenés consultas sobre tu cobertura, no dudes en <br>
                comunicarte con Alicia Marinelli.
-            </h4>             
-          </div><br>
+            </h5>             
+          </div> -->
+          <br>
           <div class="button-container">
             <a href="" class="boton">CONTACTANOS</a>
           </div>          
         </div>        
+      </div>
+      <div class="texto text-center">
+        <h5>En APDIS trabajamos día a día para brindar <br>
+           la mejor atencion a todos nuestros afiliados.<br>
+           Si tenés consultas sobre tu cobertura, no dudes en <br>
+           comunicarte con Alicia Marinelli.
+        </h5>             
       </div>
       <br>
       <br>
@@ -201,88 +209,74 @@
     Nuestras cartillas
   </h1>
 </div>
-<!-- <div class="container text-center">
-  <div class="row text-center">
-    <div class="col-xl-3 col-md-6 col-sm-12 azul">
-      <div class="button-container">
-        <img src="images/azul.png" alt="credencial">
-        <br>
-        <a href="documents/GALENO_AZUL_G.pdf" download="GALENO_AZUL_G.pdf" class="boton">Plan Azul</a>
-      </div>
-    </div>
-    <div class="col-xl-3 col-md-6 col-sm-12 oro">
-      <div class="imagen">
-        <img src="images/oro.png" alt="credencial">
-        </div>
-        <div class="button-container">
-        <a href="documents/galeno-oro2.pdf" download="galeno-oro2.pdf" class="boton">Plan Oro</a>
-        <br><br>
-        <a href="documents/GALENO-ORO_Rosario_Oro.pdf" download="GALENO-ORO_Rosario_Oro.pdf" class="boton">Plan Oro Rosario</a>
-      </div>
-    </div>
-    <div class="col-xl-3 col-md-6 col-sm-12 visitar">
-      <div class="button-container">
-        <img src="images/azul.png" alt="credencial">
-        <br>
-        <a href="documents/visitar.pdf" download="visitar.pdf" class="boton">Plan Visitar</a>
-      </div>
-    </div>
+<br>
+<div class="card ">
+  <div class="fondoTitle">
+    <h3 class="card-title">Plan Azul</h3>
   </div>
-</div> -->
-
-<div class="card">
   <div class="card-img-top img-fluid" style="background-image: url(images/oficina4.jpg); background-size: cover;">
-   <div class="card-body">
-    <h3 class="card-title azul">Plan Azul</h3>
-    <br>
+   <div class="card-body">   
+    
     <div class="text-center">
+      <br>
       <div class="button-container">
         <a href="documents/GALENO_AZUL_G.pdf" download="GALENO_AZUL_G.pdf" class="boton">Plan Azul</a>
-      </div>
-      <br>
-      Descarga toda nuestra cartilla perteneciente al plan Azul
+      </div>     
     </div>
-  </div> 
+  </div>  
+  <br><br><br>
   </div>
-  
+  <div class="text-center card-footer text-body-secondary">
+    <h5 class="fondoPie">Descarga toda nuestra cartilla perteneciente al plan azul</h5> 
+  </div>  
 </div>
 <br><br>
 
 <div class="card">
+  <div class="fondoTitle">
+    <h3 class="card-title">Plan Oro</h3>
+  </div>
   <div class="card-img-top img-fluid" style="background-image: url(images/working.jpg); background-size: cover;">
-  <div class="card-body">
-    <h3 class="card-title">Plan Oro</h3>    
+  <div class="card-body">    
     <div class="text-center">
+      <br>
       <div class="button-container">
         <a href="documents/galeno-oro2.pdf" download="galeno-oro2.pdf" class="boton">Plan Oro</a>
         <br><br>
         <a href="documents/GALENO-ORO_Rosario_Oro.pdf" download="GALENO-ORO_Rosario_Oro.pdf" class="boton">Plan Oro Rosario</a>
-      </div>
-      <br>
-      Descarga toda nuestra cartilla perteneciente al plan Oro y al plan Rosario Oro
+      </div>      
     </div>
   </div>
+  <br><br>
+  </div>
+  <div class="text-center card-footer text-body-secondary">
+    <h5 class="fondoPie">Descarga toda nuestra cartilla perteneciente al plan Oro y al plan Rosario Oro</h5> 
   </div>
 </div>
 <br><br>
 
-<div class="card">
-  <div class="card-img-top img-fluid" style="background-image: url(images/ofice.jpg); background-size: cover;">
-  <div class="card-body">
+<div class="card ">
+  <div class="fondoTitle">
     <h3 class="card-title">Plan Visitar</h3>
+  </div>
+  <div class="card-img-top img-fluid" style="background-image: url(images/ofice.jpg); background-size: cover;">
+   <div class="card-body">    
     <br>
     <div class="text-center">
+      <br>
       <div class="button-container">
         <a href="documents/visitar.pdf" download="visitar.pdf" class="boton">Plan Visitar</a>
-      </div>
-      <br>
-      Descarga toda nuestra cartilla perteneciente al plan Visitar
+      </div>     
     </div>
+  </div>  
+  <br><br><br>
   </div>
-  </div>
+  <div class="text-center card-footer text-body-secondary">
+    <h5 class="fondoPie">Descarga toda nuestra cartilla perteneciente al plan Visitar</h5> 
+  </div>  
 </div>
-<br><br>
-    </main>
+<br><br><br><br>
+</main>
 <footer class="pie">
   <div class="container text-center divLogoPie">
    <a href="#navbar"><img src="images/logo-apdis.png" alt="logo" class="logoPie"></a>   
