saltos cambios commit

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
         </div>        
       </div>
       <div class="texto text-center">
-        <h5>En APDIS trabajamos día a día para brindar <br>
-           la mejor atencion a todos nuestros afiliados.<br>
-           Si tenés consultas sobre tu cobertura, no dudes en <br>
+        <h5>En APDIS trabajamos día a día para brindar
+           la mejor atencion a todos nuestros afiliados.
+           Si tenés consultas sobre tu cobertura, no dudes en 
            comunicarte con Alicia Marinelli.
         </h5>             
       </div>
