coloress cambios commit

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
   <br><br><br>
   </div>
   <div class="text-center card-footer text-body-secondary">
-    <h5 class="fondoPie">Descarga toda nuestra cartilla perteneciente al plan azul</h5> 
+    <h6 class="fondoPie">Descarga nuestra cartilla del plan azul</h6> 
   </div>  
 </div>
 <br><br>
@@ -250,7 +250,7 @@
   <br><br>
   </div>
   <div class="text-center card-footer text-body-secondary">
-    <h5 class="fondoPie">Descarga toda nuestra cartilla perteneciente al plan Oro y al plan Rosario Oro</h5> 
+    <h6 class="fondoPie">Descarga nuestra cartilla del plan Oro y Rosario Oro</h6> 
   </div>
 </div>
 <br><br>
@@ -272,7 +272,7 @@
   <br><br><br>
   </div>
   <div class="text-center card-footer text-body-secondary">
-    <h5 class="fondoPie">Descarga toda nuestra cartilla perteneciente al plan Visitar</h5> 
+    <h6 class="fondoPie">Descarga nuestra cartilla del plan Visitar</h6> 
   </div>  
 </div>
 <br><br><br><br>
