--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </div>
       <div class="texto text-center">
         <h5>En APDIS trabajamos día a día para brindar
-           la mejor atencion a todos nuestros afiliados.
+           la mejor atencion a todos nuestros afiliados. <br>
            Si tenés consultas sobre tu cobertura, no dudes en 
            comunicarte con Alicia Marinelli.
         </h5>             
